--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles-all.css">
-    <link rel="stylesheet" href="styles-about.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <title>May Wang</title>
