--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav>
         <div>
-          <a href="about.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="work-exp.html">Work Experience</a>
         </div>
       </nav>
