--- a/work-exp.html
+++ b/work-exp.html
@@ -9,18 +9,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>May Wang</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles-all.css">
     <link rel="stylesheet" href="styles-work-exp.css">
     <script src="index.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <title>May Wang</title>
   </head>
 
   <body>
     <header>
       <nav>
         <div>
-          <a href="about.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="work-exp.html">Work Experience</a>
         </div>
       </nav>
@@ -87,7 +87,7 @@
     </main>
 
     <footer>
-      Copyright 2020 May Wang
+      Copyright 2020 May Wang. All rights reserved.
     </footer>
   </body>
 </html>
