--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             looking for Summer 2021 SWE internships.
           </p>
           <p>
-            I'm involved in many Registered Student Organizations (RSOs) at UW, including SEED, and
+            I'm involved in many Registered Student Organizations (RSOs) at UW, including SEED and
             Acts 2 Fellowship (A2F). I'm also very excited to join the 2020-21 Residential Life
             team as a Resident Adviser (RA)!
           </p>
           <p>
-            Check out my other pages for more information on my involvement and activities. Also
+            Check out my other pages for more information on my involvement and activities, and
             feel free to contact me!
           </p>
         </section>
