updated behaviour and appearance

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav>
         <div>
           <button id="home-btn">Home</button>
-          <button id="work-btn">Work Experience</button>
+          <button id="work-btn" disabled>Work Experience</button>
           <button id="resume-btn">Resume</button>
           <button id="contact-btn">Contact</button>
         </div>
@@ -58,7 +58,7 @@
       </section>
 
       <!-- Work Experience to be populated using JavaScript -->
-      <section id="work-exp" class="hidden"></section>
+      <section id="work" class="hidden"></section>
 
       <section id="contact" class="hidden">
         <h2>Contact Me</h2>
@@ -74,6 +74,6 @@
       <button id="top-btn">Back to Top</button>
     </main>
 
-    <footer>&copy; Copyright 2020 May Wang. All rights reserved.</footer>
+    <footer>Copyright &copy; 2020 May Wang. All rights reserved.</footer>
   </body>
 </html>
