edited button behaviour

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <label for="name">Name</label>
           <input type="text" id="name" required>
           <label for="email">Email</label>
-          <input type="text" id="yip" required pattern="^[a-zA-Z\d]+@[a-zA-Z]+[.com]{1}$">
+          <input type="text" id="yip" required pattern="^[a-zA-Z\d]+@[a-zA-Z]+[.][a-zA-Z]+">
           <button>Submit!</button>
         </form>
       </section>
