improved html design, css, and added JS behaviour

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h2>About Me</h2>
           <img src="img/profile.jpg" alt="Profile Picture">
           <p>
-            Hi, I'm May! I'm a second year student studying computer science at UW. I'm currently
+            Hi, I'm May! I'm a second year student studying <em>computer science</em> at <em>UW</em>. I'm currently
             looking for Summer 2021 SWE internships.
           </p>
           <p>
@@ -52,7 +52,7 @@
           </p>
           <p>
             Check out my other pages for more information on my involvement and activities, and
-            feel free to contact me!
+            feel free to <span>contact</span> me!
           </p>
         </section>
       </section>
