edited contact form

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
           <label for="name">Name</label>
           <input type="text" id="name" required>
           <label for="email">Email</label>
-          <input type="text" id="yip" required pattern="^[a-zA-Z\d]+@[a-zA-Z]+[.][a-zA-Z]+">
-          <button>Submit!</button>
+          <input type="text" id="email" required pattern="^[a-zA-Z\d]+@[a-zA-Z]+[.][a-zA-Z]+">
+          <label for="message">Message</label>
+          <textarea id="message" rows="5" cols="10"></textarea>
+          <button disabled>Submit!</button>
         </form>
       </section>
 
