changed profile pic

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section id="about">
           <h2>About Me</h2>
-          <img src="img/profile.jpg" alt="Profile Picture">
+          <img src="img/profile.jpeg" alt="Profile Picture">
           <p>
             Hi, I'm May! I'm a second year student studying <em>computer science</em> at <em>UW</em>. I'm currently
             looking for Summer 2021 SWE internships.
