changed how resume is displayed

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       <!-- Work Experience to be populated using JavaScript -->
       <section id="work" class="hidden"></section>
 
+      <!-- Resume to be displayed using JavaScript -->
+      <section id="resume" class="hidden">
+        <embed src="files/MayWang_Resume.pdf" width=100% height=100%>
+      </section>
+
       <section id="contact" class="hidden">
         <h2>Contact Me</h2>
         <form>
