updated bio and resume

--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
           <h2>About Me</h2>
           <img src="img/profile.jpeg" alt="Profile Picture">
           <p>
-            Hi, I'm May! I'm a second year student studying <em>computer science</em> at <em>UW</em>. I'm currently
-            looking for Summer 2021 SWE internships.
+            Hi, I'm May! I'm a second year student studying <em>computer science</em> at <em>UW</em>.
+            I'm currently looking for Summer 2021 SWE internships.
           </p>
           <p>
-            I'm involved in many Registered Student Organizations (RSOs) at UW, including SEED and
-            Acts 2 Fellowship (A2F). I'm also very excited to join the 2020-21 Residential Life
-            team as a Resident Adviser (RA)!
+            Aside from code, I enjoy working as a Resident Adviser in an apartment-style residence
+            hall and assisting students with coding as a Teaching Assistant.
           </p>
           <p>
             Check out my other pages for more information on my involvement and activities, and
