--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </p>
           <p>
             Aside from code, I enjoy working as a Resident Adviser in an apartment-style residence
-            hall and assisting students with coding as a Teaching Assistant.
+            hall and helping students with coding as a Teaching Assistant.
           </p>
           <p>
             Check out my other pages for more information on my involvement and activities, and
