modified work experience

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   May Wang
   July 14, 2020
 
-  This is my personal website. On this page you can find my brief introduction, my work experience,
-  my resume, and a way to contact me directly.
+  This is my personal website. On this page you can find my brief introduction, my experience, my
+  resume, and a way to contact me directly.
 -->
 <html lang="en">
   <head>
@@ -20,7 +20,7 @@
       <nav>
         <div>
           <button id="home-btn">Home</button>
-          <button id="work-btn" disabled>Work Experience</button>
+          <button id="exp-btn" disabled>Experience</button>
           <button id="resume-btn">Resume</button>
           <button id="contact-btn">Contact</button>
         </div>
@@ -56,8 +56,8 @@
         </section>
       </section>
 
-      <!-- Work Experience to be populated using JavaScript -->
-      <section id="work" class="hidden"></section>
+      <!-- Experience to be populated using JavaScript -->
+      <section id="exp" class="hidden"></section>
 
       <!-- Resume to be displayed using JavaScript -->
       <section id="resume" class="hidden">
