updated info & resume

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
           <h2>About Me</h2>
           <img src="img/profile.jpeg" alt="Profile Picture">
           <p>
-            Hi, I'm May! I'm a second year student studying <em>computer science</em> at <em>UW</em>.
-            I'm currently looking for Summer 2021 SWE internships.
+            Hi, I'm May! I'm a third-year student studying <em>computer science</em> at <em>UW</em>.
+            I'm currently looking for Summer 2022 SWE internships.
           </p>
           <p>
-            Aside from code, I enjoy working as a Resident Adviser in an apartment-style residence
-            hall and helping students with coding as a Teaching Assistant.
+            Aside from code, I enjoy working as a Resident Adviser, as well as teaching students
+            Java programming as a Head Teaching Assistant.
           </p>
           <p>
             Check out my other pages for more information on my involvement and activities, and
