edited about me, fixed CSS

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
           <h1>May Wang</h1>
           <div>
             <p>
-              Computer science student at the University of Washington, Seattle.<br>Detailed, driven,
-              and passionate about technology.
+              Computer science student at the University of Washington, Seattle.<br>
+              Detailed, driven, and passionate about technology.
             </p>
+          <div id="scroll">
+              Scroll down
           </div>
         </section>
         <section id="about">
@@ -43,15 +45,19 @@
           <img src="img/profile.jpeg" alt="Profile Picture">
           <p>
             Hi, I'm May! I'm a third-year student studying <em>computer science</em> at <em>UW</em>.
-            I'm currently looking for Summer 2022 SWE internships.
           </p>
           <p>
-            Aside from code, I enjoy working as a Resident Adviser, as well as teaching students
-            Java programming as a Head Teaching Assistant.
+            I'm interested in software engineering, and have worked on projects using languages such
+            as Java, HTML/CSS, JavaScript, Python, and C.
           </p>
           <p>
-            Check out my other pages for more information on my involvement and activities, and
-            feel free to <span>contact</span> me!
+            I also enjoy supporting others as a Resident Adviser at UW, as well as teaching
+            Java programming as a Head Teaching Assistant for the introductory computer science
+            series.
+          </p>
+          <p>
+            Check out my other pages to see my projects and involvement, and feel free to
+            <span>contact</span> me!
           </p>
         </section>
       </section>
