added JS to scroll btn

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                           Detailed, driven, and passionate about technology.
                         </p>
                     </div>
-                    <div id="scroll">
+                    <button id="scroll-btn">
                         Scroll down
-                    </div>
+                    </button>
                 </section>
                 <section id="about">
                     <h2>About Me</h2>
