--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         Hi, I'm May! I'm a third-year student studying <em>computer science</em> at <em>UW</em>.
                     </p>
                     <p>
-                        I'm interested in software engineering, and have worked on projects using languages such
-                        as Java, HTML/CSS, JavaScript, Python, and C.
+                        I'm interested in software engineering, and have worked on projects using languages
+                        including Java, HTML/CSS, JavaScript, Python, and C.
                     </p>
                     <p>
                         I also enjoy supporting others as a Resident Adviser at UW, as well as teaching
